--- a/templates/base.html
+++ b/templates/base.html
@@ -70,15 +70,19 @@
 
     <div class="container">
         {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
-                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
-                {{ message }}
-            </li>
-            {% endfor %}
-        </ul>
+            <div class="alert-group">
+                {% for message in messages %}
+                    {% with message.tags as tags %}
+                        <div class="alert {% if tags %}alert-{{ tags }}{% endif %} alert-dismissible fade show" role="alert">
+                            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}<strong>Important:</strong>{% endif %}
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endwith %}
+                {% endfor %}
+            </div>
         {% endif %}
+
         {% block content %}{% endblock %}
     </div>
 
