--- a/templates/autho/email_login.html
+++ b/templates/autho/email_login.html
@@ -9,13 +9,13 @@
         {% csrf_token %}
         <!-- username input -->
         <div class="form-outline mb-4">
-          <input name="email" type="email" id="form2Example1" class="form-control" />
+          <input style="color: white;" name="email" type="email" id="form2Example1" class="form-control" />
           <label class="form-label" for="form2Example1">Email address</label>
         </div>
       
         <!-- Password input -->
         <div class="form-outline mb-4">
-          <input name="password" type="password" id="form2Example2" class="form-control" />
+          <input style="color: white;" name="password" type="password" id="form2Example2" class="form-control" />
           <label class="form-label" for="form2Example2">Password</label>
         </div>
       
@@ -24,8 +24,7 @@
           <div class="col d-flex justify-content-center">
             <!-- Checkbox -->
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-              <label class="form-check-label" for="form2Example31"> Remember me </label>
+              <label class="form-check-label" for="form2Example31">Sign in with <a href="{% url 'user_login' %}">Username</a></label>
             </div>
           </div>
       
