--- a/templates/autho/user_login.html
+++ b/templates/autho/user_login.html
@@ -9,13 +9,13 @@
       {% csrf_token %}
       <!-- Username input -->
       <div class="form-outline mb-4">
-        <input name="username" type="username" id="form2Example1" class="form-control" />
-        <label class="form-label" for="form2Example1">Email address</label>
+        <input style="color: white;" name="username" type="username" id="form2Example1" class="form-control" />
+        <label class="form-label" for="form2Example1">Username</label>
       </div>
     
       <!-- Password input -->
       <div class="form-outline mb-4">
-        <input name="password" type="password" id="form2Example2" class="form-control" />
+        <input style="color: white;" name="password" type="password" id="form2Example2" class="form-control" />
         <label class="form-label" for="form2Example2">Password</label>
       </div>
     
@@ -24,7 +24,7 @@
         <div class="col d-flex justify-content-center">
           <!-- Checkbox -->
           <div class="form-check">
-            <p>sign in with <a href="{% url 'email_login' %}">email</a></p>
+            <p>Sign in with <a href="{% url 'email_login' %}">Email</a></p>
           </div>
         </div>
     
