--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -2,6 +2,11 @@
 {% load static %}
 
 {% block content %}
+<style>
+    th, td {
+        color: white;
+    }
+</style>
 <br>
 <div class="container">
     <div class="row">
@@ -9,14 +14,34 @@
             <img style="width: 300px; height: auto;" src="{{ user.profile.profile_image.url }}" alt="" srcset="">
         </div>
         <div class="col-md-8">
-            <h4>username: @{{ user.username }}</h4>
-            <h4>first name: {% if user.first_name %}{{ user.first_name }}{% else %}<span style="color: red;">No first name provided</span>{% endif %}</h4>
-            <h4>last name: {% if user.last_name %}{{ user.last_name }}{% else %}<span style="color: red;">No last name provided</span>{% endif %}</h4>
-            <h4>bio: {% if user.bio %}{{ user.bio }}{% else %} <span style="color: red;">No bio provided</span>{% endif %}</h4>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                update
+            <table class="table table-striped">
+                <tbody>
+                    <tr>
+                        <th>Field</th>
+                        <th>Value</th>
+                    </tr>
+                    <tr>
+                        <td>Username</td>
+                        <td>@{{ user.username }}</td>
+                    </tr>
+                    <tr>
+                        <td>First Name</td>
+                        <td>{% if user.first_name %}{{ user.first_name }}{% else %}<span style="color: red;">No first name provided</span>{% endif %}</td>
+                    </tr>
+                    <tr>
+                        <td>Last Name</td>
+                        <td>{% if user.last_name %}{{ user.last_name }}{% else %}<span style="color: red;">No last name provided</span>{% endif %}</td>
+                    </tr>
+                    <tr>
+                        <td>Bio</td>
+                        <td>{% if user.bio %}{{ user.bio }}{% else %}<span style="color: red;">No bio provided</span>{% endif %}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <button type="button" class="btn btn-outline-info form-control" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Update
             </button>
+            
             
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
