--- a/templates/users/inbox.html
+++ b/templates/users/inbox.html
@@ -22,7 +22,6 @@
     <!-- Other head content -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!--linkss-->
-    <link rel="stylesheet" href="{% static 'css/inbox.css' %}">
 </head>
 <body>
     <style>
@@ -30,18 +29,651 @@
             background-color: #020211;
             color: #ffffff;
         }
+    
         .navbar {
             background-color: #000006 !important;
             height: 60px;
             border-bottom: 2px solid blue;
             box-shadow: 0 8px 10px -5px blue;
         }
+    
         .glow {
             color: #00f;
             text-shadow: 0 0 5px #00f, 0 0 9px #00f, 0 0 14px #00f, 0 0 19px #00f;
         }
+    
         .navbar-brand.big-text {
             font-size: 24px !important;
+        }
+    
+        /*--------------------------------------------------------------
+    # Header
+    --------------------------------------------------------------*/
+        .header {
+            transition: all 0.5s;
+            z-index: 997;
+            padding: 20px 0;
+        }
+    
+        .header.header-scrolled {
+            background: #fff;
+            padding: 15px 0;
+            box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
+        }
+    
+        .header .logo {
+            line-height: 0;
+        }
+    
+        .header .logo img {
+            max-height: 40px;
+            margin-right: 6px;
+        }
+    
+        .header .logo span {
+            font-size: 30px;
+            font-weight: 700;
+            letter-spacing: 1px;
+            color: #012970;
+            font-family: "Nunito", sans-serif;
+            margin-top: 3px;
+        }
+    
+        /*--------------------------------------------------------------
+    # Header
+    --------------------------------------------------------------*/
+        .header {
+            transition: all 0.5s;
+            z-index: 997;
+            padding: 20px 0;
+        }
+    
+        .header.header-scrolled {
+            background: #fff;
+            padding: 15px 0;
+            box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
+        }
+    
+        .header .logo {
+            line-height: 0;
+        }
+    
+        .header .logo img {
+            max-height: 40px;
+            margin-right: 6px;
+        }
+    
+        .header .logo span {
+            font-size: 30px;
+            font-weight: 700;
+            letter-spacing: 1px;
+            color: #012970;
+            font-family: "Nunito", sans-serif;
+            margin-top: 3px;
+        }
+    
+        /*--------------------------------------------------------------
+    # Navigation Menu
+    --------------------------------------------------------------*/
+        /**
+    * Desktop Navigation 
+    */
+        .navbar {
+            padding: 0;
+        }
+    
+        .navbar ul {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            list-style: none;
+            align-items: center;
+        }
+    
+        .navbar li {
+            position: relative;
+        }
+    
+        .navbar a,
+        .navbar a:focus {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 0 10px 30px;
+            font-family: "Nunito", sans-serif;
+            font-size: 16px;
+            font-weight: 700;
+            color: #013289;
+            white-space: nowrap;
+            transition: 0.3s;
+        }
+    
+        .navbar a i,
+        .navbar a:focus i {
+            font-size: 12px;
+            line-height: 0;
+            margin-left: 5px;
+        }
+    
+        .navbar a:hover,
+        .navbar .active,
+        .navbar .active:focus,
+        .navbar li:hover>a {
+            color: #4154f1;
+        }
+    
+        .navbar .getstarted,
+        .navbar .getstarted:focus {
+            background: #4154f1;
+            padding: 8px 20px;
+            margin-left: 30px;
+            border-radius: 4px;
+            color: #fff;
+        }
+    
+        .navbar .getstarted:hover,
+        .navbar .getstarted:focus:hover {
+            color: #fff;
+            background: #5969f3;
+        }
+    
+        .navbar .dropdown ul {
+            display: block;
+            position: absolute;
+            left: 14px;
+            top: calc(100% + 30px);
+            margin: 0;
+            padding: 10px 0;
+            z-index: 99;
+            opacity: 0;
+            visibility: hidden;
+            background: #fff;
+            box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+            transition: 0.3s;
+            border-radius: 4px;
+        }
+    
+        .navbar .dropdown ul li {
+            min-width: 200px;
+        }
+    
+        .navbar .dropdown ul a {
+            padding: 10px 20px;
+            font-size: 15px;
+            text-transform: none;
+            font-weight: 600;
+        }
+    
+        .navbar .dropdown ul a i {
+            font-size: 12px;
+        }
+    
+        .navbar .dropdown ul a:hover,
+        .navbar .dropdown ul .active:hover,
+        .navbar .dropdown ul li:hover>a {
+            color: #4154f1;
+        }
+    
+        .navbar .dropdown:hover>ul {
+            opacity: 1;
+            top: 100%;
+            visibility: visible;
+        }
+    
+        .navbar .dropdown .dropdown ul {
+            top: 0;
+            left: calc(100% - 30px);
+            visibility: hidden;
+        }
+    
+        .navbar .dropdown .dropdown:hover>ul {
+            opacity: 1;
+            top: 0;
+            left: 100%;
+            visibility: visible;
+        }
+    
+        @media (max-width: 1366px) {
+            .navbar .dropdown .dropdown ul {
+                left: -90%;
+            }
+    
+            .navbar .dropdown .dropdown:hover>ul {
+                left: -100%;
+            }
+        }
+    
+        /**
+    * Mobile Navigation 
+    */
+        .mobile-nav-toggle {
+            color: #012970;
+            font-size: 28px;
+            cursor: pointer;
+            display: none;
+            line-height: 0;
+            transition: 0.5s;
+        }
+    
+        .mobile-nav-toggle.bi-x {
+            color: #fff;
+        }
+    
+        @media (max-width: 991px) {
+            .mobile-nav-toggle {
+                display: block;
+            }
+    
+            .navbar ul {
+                display: none;
+            }
+        }
+    
+        .navbar-mobile {
+            position: fixed;
+            overflow: hidden;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            background: rgba(1, 22, 61, 0.9);
+            transition: 0.3s;
+        }
+    
+        .navbar-mobile .mobile-nav-toggle {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+        }
+    
+        .navbar-mobile ul {
+            display: block;
+            position: absolute;
+            top: 55px;
+            right: 15px;
+            bottom: 15px;
+            left: 15px;
+            padding: 10px 0;
+            border-radius: 10px;
+            background-color: #fff;
+            overflow-y: auto;
+            transition: 0.3s;
+        }
+    
+        .navbar-mobile a,
+        .navbar-mobile a:focus {
+            padding: 10px 20px;
+            font-size: 15px;
+            color: #012970;
+        }
+    
+        .navbar-mobile a:hover,
+        .navbar-mobile .active,
+        .navbar-mobile li:hover>a {
+            color: #4154f1;
+        }
+    
+        .navbar-mobile .getstarted,
+        .navbar-mobile .getstarted:focus {
+            margin: 15px;
+        }
+    
+        .navbar-mobile .dropdown ul {
+            position: static;
+            display: none;
+            margin: 10px 20px;
+            padding: 10px 0;
+            z-index: 99;
+            opacity: 1;
+            visibility: visible;
+            background: #fff;
+            box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+        }
+    
+        .navbar-mobile .dropdown ul li {
+            min-width: 200px;
+        }
+    
+        .navbar-mobile .dropdown ul a {
+            padding: 10px 20px;
+        }
+    
+        .navbar-mobile .dropdown ul a i {
+            font-size: 12px;
+        }
+    
+        .navbar-mobile .dropdown ul a:hover,
+        .navbar-mobile .dropdown ul .active:hover,
+        .navbar-mobile .dropdown ul li:hover>a {
+            color: #4154f1;
+        }
+    
+        .navbar-mobile .dropdown>.dropdown-active {
+            display: block;
+        }
+    
+        .chat-list h3 {
+            color: #222;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 1.5;
+            text-transform: capitalize;
+            margin-bottom: 0;
+        }
+    
+        .chat-list p {
+            color: #343434;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 1.5;
+            text-transform: capitalize;
+            margin-bottom: 0;
+        }
+    
+        .chat-list a.d-flex {
+            margin-bottom: 15px;
+            position: relative;
+            text-decoration: none;
+        }
+    
+        .chat-list .active {
+            display: block;
+            content: "";
+            clear: both;
+            position: absolute;
+            bottom: 3px;
+            left: 34px;
+            height: 12px;
+            width: 12px;
+            background: #00db75;
+            border-radius: 50%;
+            border: 2px solid #fff;
+        }
+    
+        .msg-body ul li.sender {
+            display: block;
+            width: 100%;
+            position: relative;
+        }
+    
+        .msg-body ul li.sender:before {
+            display: block;
+            clear: both;
+            content: "";
+            position: absolute;
+            top: -6px;
+            left: -7px;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 0 12px 15px 12px;
+            border-color: transparent transparent #f5f5f5 transparent;
+            -webkit-transform: rotate(-37deg);
+            -ms-transform: rotate(-37deg);
+            transform: rotate(-37deg);
+        }
+    
+        .msg-body ul li.sender p {
+            color: #000;
+            font-size: 14px;
+            line-height: 1.5;
+            font-weight: 400;
+            padding: 15px;
+            background: #f5f5f5;
+            display: inline-block;
+            border-bottom-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            margin-bottom: 0;
+        }
+    
+        .msg-body ul li.sender p b {
+            display: block;
+            color: #180660;
+            font-size: 14px;
+            line-height: 1.5;
+            font-weight: 500;
+        }
+    
+        .msg-body ul li.repaly {
+            display: block;
+            width: 100%;
+            text-align: right;
+            position: relative;
+        }
+    
+        .msg-body ul li.repaly:before {
+            display: block;
+            clear: both;
+            content: "";
+            position: absolute;
+            bottom: 15px;
+            right: -7px;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 0 12px 15px 12px;
+            border-color: transparent transparent #4b7bec transparent;
+            -webkit-transform: rotate(37deg);
+            -ms-transform: rotate(37deg);
+            transform: rotate(37deg);
+        }
+    
+        .msg-body ul li.repaly p {
+            color: #fff;
+            font-size: 14px;
+            line-height: 1.5;
+            font-weight: 400;
+            padding: 15px;
+            background: #4b7bec;
+            display: inline-block;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            margin-bottom: 0;
+        }
+    
+        .msg-body ul li.repaly p b {
+            display: block;
+            color: #061061;
+            font-size: 14px;
+            line-height: 1.5;
+            font-weight: 500;
+        }
+    
+        .msg-body ul li.repaly:after {
+            display: block;
+            content: "";
+            clear: both;
+        }
+    
+        .time {
+            display: block;
+            color: #000;
+            font-size: 12px;
+            line-height: 1.5;
+            font-weight: 400;
+        }
+    
+        li.repaly .time {
+            margin-right: 20px;
+        }
+    
+        .divider {
+            position: relative;
+            z-index: 1;
+            text-align: center;
+        }
+    
+        .divider:after {
+            display: block;
+            content: "";
+            clear: both;
+            position: absolute;
+            top: 12px;
+            left: 0;
+            border-top: 1px solid #ebebeb;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+    
+    
+        .msg-body h6 {
+            text-align: center;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 1.5;
+            color: #222;
+            background: #fff;
+            display: inline-block;
+            padding: 0 5px;
+            margin-bottom: 0;
+        }
+    
+        .send-box {
+            padding: 15px;
+            border-top: 1px solid #ccc;
+        }
+    
+        .send-box form {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 15px;
+        }
+    
+        .send-box .form-control {
+            display: block;
+            width: 85%;
+            padding: 0.375rem 0.75rem;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #222;
+            background-color: #fff;
+            background-clip: padding-box;
+            border: 1px solid #ccc;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            border-radius: 0.25rem;
+            transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        }
+    
+        .send-box button {
+            border: none;
+            background: #3867d6;
+            padding: 0.375rem 5px;
+            color: #fff;
+            border-radius: 0.25rem;
+            font-size: 14px;
+            font-weight: 400;
+            width: 24%;
+            margin-left: 1%;
+        }
+    
+        .send-box button i {
+            margin-right: 5px;
+        }
+    
+        .send-btns .button-wrapper {
+            position: relative;
+            width: 125px;
+            height: auto;
+            text-align: left;
+            margin: 0 auto;
+            display: block;
+            background: #f6f7fa;
+            border-radius: 3px;
+            padding: 5px 15px;
+            float: left;
+            margin-right: 5px;
+            margin-bottom: 5px;
+            overflow: hidden;
+        }
+    
+        .send-btns .button-wrapper span.label {
+            position: relative;
+            z-index: 1;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            width: 100%;
+            cursor: pointer;
+            color: #343945;
+            font-weight: 400;
+            text-transform: capitalize;
+            font-size: 13px;
+        }
+    
+        #upload {
+            display: inline-block;
+            position: absolute;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            opacity: 0;
+            cursor: pointer;
+        }
+    
+        .send-btns .attach .form-control {
+            display: inline-block;
+            width: 120px;
+            height: auto;
+            padding: 5px 8px;
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #343945;
+            background-color: #f6f7fa;
+            background-clip: padding-box;
+            border: 1px solid #f6f7fa;
+            border-radius: 3px;
+            margin-bottom: 5px;
+        }
+    
+        .send-btns .button-wrapper span.label img {
+            margin-right: 5px;
+        }
+    
+        .add-apoint {
+            display: inline-block;
+            margin-left: 5px;
+        }
+    
+        .add-apoint a {
+            text-decoration: none;
+            background: #f6f7fa;
+            border-radius: 8px;
+            padding: 8px 8px;
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 1.2;
+            color: #343945;
+        }
+    
+        .add-apoint a svg {
+            margin-right: 5px;
+        }
+    
+        #all_chats {
+            height: 53rem;
+        }
+    
+        @media screen and (max-width: 767px) {
+            #all_chats {
+                height: 20rem;
+            }
+        }
+    
+        .file-label {
+            cursor: pointer;
         }
     </style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
